feat: trading system

--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -65,3 +65,6 @@ jeresources:mob
 jeresources:plant
 jeresources:villager
 jeresources:worldgen
+ftbquests:loot_crate
+ftbquests:quest
+kws:trading_machine
