feat: added galvanized steel and waystones

--- a/config/jei/jei-client.ini
+++ b/config/jei/jei-client.ini
@@ -17,7 +17,7 @@
 	# Description: Enable cheating items into the hotbar by using the shift+number keys.
 	# Valid Values: [true, false]
 	# Default Value: false
-	CheatToHotbarUsingHotkeysEnabled = false
+	CheatToHotbarUsingHotkeysEnabled = true
 
 	# Description: How items should be handed to you
 	# Valid Values: [INVENTORY, MOUSE_PICKUP]
